fixed flickering of navbar when becoming sticky

--- a/00-intersection-observer-api/03-react-intersectionObserver-02/src/components/MainNavigation.module.css
+++ b/00-intersection-observer-api/03-react-intersectionObserver-02/src/components/MainNavigation.module.css
@@ -1,3 +1,11 @@
+.outerContainer {
+  height: 20rem;
+  position: sticky;
+  overflow-anchor: none;
+  opacity: 1;
+  z-index: 100
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -8,17 +16,15 @@
   padding: 4rem 0 5rem;
   align-items: center;
   border-bottom: 1px solid var(--color-gray-500);
-  transition: 1s;
-  opacity: 1;
-  z-index: 100
+  transition: 0.8s;
 }
 
 .header.sticky {
   opacity: 0.7;
   position: fixed;
   /* position: sticky; */
-  overflow-anchor: none;
-  top: 0;
+  /* overflow-anchor: none; */
+  /* top: 0; */
   gap: 2rem;
   padding: 2rem 0 3rem;
 }
